# build-day-manila-2026-starter-pack

./: .env.example  AGENTS.md  README.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-bilingual-foundation/: 01-01-PLAN.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
agent/: pyproject.toml
agent/src/agent/: __main__.py  prompt.py
api/src/api/: __init__.py  client.py  models.py
core/: pyproject.toml
core/src/core/: __init__.py  app.py  frame.py  practice.py  stream.py  test_frame.py
